--- a/src/pages/serviceInstall.html
+++ b/src/pages/serviceInstall.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/dist/output.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/flowbite@1.4.4/dist/flowbite.min.css" />
 </head>
 
 <body class="bg-gray-200">
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
-    <div class="min-h-screen">
+    <div>
         <div class="antialiased bg-gray-100 dark-mode:bg-gray-900">
             <div class="w-full text-gray-700 bg-white dark-mode:text-gray-200 dark-mode:bg-gray-800">
                 <div x-data="{ open: true }"
@@ -41,6 +42,52 @@
                             href="#">Profile</a>
                     </nav>
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="flex flex-row border-2 border-black m-10">
+        <div class="w-1/2 bg-gray-300 p-10">
+            <p class="text-2xl">
+                Drag and drop the service zip file on the right hand side and click install. Ilearn will take care of
+                the
+                rest and install it for you.
+            </p>
+            <p class="text-xl mt-10">
+                Make sure that the service source code fulfills the following requirements:
+            </p>
+
+        </div>
+        <div class="w-1/2 flex flex-col items-center">
+            <div class="max-w-2xl mx-auto  w-full mt-10">
+                <div class="flex items-center justify-center">
+                    <label for="dropzone-file"
+                        class="flex flex-col items-center justify-center w-full h-64 border-2 border-gray-300 border-dashed rounded-lg cursor-pointer bg-gray-50 dark:hover:bg-bray-800 dark:bg-gray-700 hover:bg-gray-100 dark:border-gray-600 dark:hover:border-gray-500 dark:hover:bg-gray-600">
+                        <div class="flex flex-col items-center justify-center pt-5 pb-6">
+                            <svg class="w-10 h-10 mb-3 text-gray-400" fill="none" stroke="currentColor"
+                                viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M7 16a4 4 0 01-.88-7.903A5 5 0 1115.9 6L16 6a5 5 0 011 9.9M15 13l-3-3m0 0l-3 3m3-3v12">
+                                </path>
+                            </svg>
+                            <p class="mb-2 text-sm text-gray-500 dark:text-gray-400"><span class="font-semibold">Click
+                                    to upload</span> or drag and drop</p>
+                            <p class="text-xs text-gray-500 dark:text-gray-400">ZIP files only
+                            </p>
+                        </div>
+                        <input id="dropzone-file" type="file" class="hidden" />
+                    </label>
+                </div>
+                <script src="https://unpkg.com/flowbite@1.4.0/dist/flowbite.js"></script>
+            </div>
+            <div class="my-10">
+                <button
+                    class="group rounded-lg h-12 w-48 bg-blue-500 font-bold text-lg text-white relative overflow-hidden">
+                    Install!
+                    <div
+                        class="absolute duration-300 inset-0 w-full h-full transition-all scale-0 group-hover:scale-100 group-hover:bg-white/30 rounded-2xl">
+                    </div>
+                </button>
             </div>
         </div>
     </div>
