assignment card added to index.html

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -34,10 +34,12 @@
         </div>
 
 
-        <div class="flex  mt-12 mr-12 ml-12 mb-12">
+<div class="flex justify-between">
+
+        <div class="inline  mt-12 mr-12 ml-12 mb-12">
             <a class="rounded-3xl inline-block overflow-hidden shadow-xl max-w-xs cursor-pointer transition ease-in-out hover:-translate-y-1 hover:scale-102 duration-300 bg-white min-h-max">
 
-                <div class="text-center px-12 py-12">
+                <div class="text-center px-20 py-28">
                     <p class="mt-2 font-sans font-light text-slate-700 text-3xl">
                         Assignments
                     </p>
@@ -46,6 +48,46 @@
             </a>
 
         </div>
+
+
+        <div class="inline mt-12 mr-12 ml-12 mb-12">
+            <a class="rounded-3xl inline-block overflow-hidden shadow-xl max-w-xs cursor-pointer transition ease-in-out hover:-translate-y-1 hover:scale-102 duration-300 bg-white min-h-max">
+
+                <div class="text-center px-28 py-28">
+                    <p class="mt-2 font-sans font-light text-slate-700 text-3xl">
+                        Chats
+                    </p>
+                </div>
+
+            </a>
+        </div>
+
+
+        <div class="inline mt-12 mr-12 ml-12 mb-12">
+            <a class="rounded-3xl inline-block overflow-hidden shadow-xl max-w-xs cursor-pointer transition ease-in-out hover:-translate-y-1 hover:scale-102 duration-300 bg-white min-h-max">
+
+                <div class="text-center px-20 py-20">
+                    <p class="mt-2 font-sans font-light text-slate-700 text-3xl">
+                        Other installed services
+                    </p>
+                </div>
+
+            </a>
+        </div>
+
+        <div class="inline mt-12 mr-12 ml-12 mb-12">
+            <a class="rounded-3xl inline-block overflow-hidden shadow-xl max-w-xs cursor-pointer transition ease-in-out hover:-translate-y-1 hover:scale-102 duration-300 bg-white min-h-max">
+
+                <div class="text-center px-20 py-20">
+                    <p class="mt-2 font-sans font-light text-slate-700 text-3xl">
+                        Other installed services 
+                    </p>
+                </div>
+
+            </a>
+        </div>
+
+</div>
 
 
     </body>
