--- a/src/pages/serviceInstall.html
+++ b/src/pages/serviceInstall.html
@@ -107,7 +107,7 @@
                             <p class="text-xs text-gray-500 dark:text-gray-400">ZIP files only
                             </p>
                         </div>
-                        <input id="dropzone_file" type="file" name="dropzone_file" />
+                        <input id="dropzone_file" type="file" name="dropzone_file" accept=".zip" size />
                     </label>
                 </div>
                 <script src="https://unpkg.com/flowbite@1.4.0/dist/flowbite.js"></script>
